# noveletary

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  pyproject.toml
data/: .gitkeep
scripts/: gemma4_writer_harness.py  gemma4_writer_harness_longform.py
src/noveletary/: __init__.py  constraints.py  engine.py  extract.py  kwja_extract.py  reconcile.py  server.py  store.py
tests/: test_branch.py  test_constraints.py  test_engine.py  test_nlp_optional.py  test_reconcile.py  test_soft_audit.py  test_store.py
